package NYT.NChunkManager.NProto;

////////////////////////////////////////////////////////////////////////////////

message THolderStatistics
{
    required int64 AvailableSpace = 1;
    required int64 UsedSpace = 2;
    required int32 ChunkCount = 3;
}

message TChunkInfo
{
    required bytes Id = 1;
    required int64 Size = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRegisterHolder
{
    required bytes Address = 1;
    required THolderStatistics Statistics = 2;
}

message TRspRegisterHolder
{
    required int32 HolderId = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TJobInfo
{
    required bytes JobId = 1;
    required int32 State = 2;
}

message TJobStartInfo
{
    required bytes JobId = 1;
    required bytes ChunkId = 2;
    repeated bytes TargetAddresses = 3;
}

message TReqHolderHeartbeat
{
    required int32 HolderId = 1;

    required THolderStatistics Statistics = 2;

    repeated TChunkInfo AddedChunks = 3;
    repeated bytes RemovedChunks = 4;

    repeated TJobInfo Jobs = 5;
}

message TRspHolderHeartbeat
{
    repeated bytes ChunksToRemove = 1;
    repeated TJobStartInfo JobsToStart = 2;
    repeated bytes JobsToStop = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqAddChunk
{
    required bytes TransactionId = 1;
    required int32 ReplicationFactor = 2;
}

message TRspAddChunk
{
    required bytes ChunkId = 1;
    repeated bytes HolderAddresses = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqFindChunk
{
    required bytes TransactionId = 1;
    required bytes ChunkId = 2;
}

message TRspFindChunk
{
    repeated bytes HolderAddresses = 1;
}

////////////////////////////////////////////////////////////////////////////////
